versions/v3.6.0/build/dts/api/bindings/auxdisplay/hit,hd44780.md
---
version: v3.6.0
source_url: https://docs.zephyrproject.org/3.6.0/build/dts/api/bindings/auxdisplay/hit,hd44780.html
original_path: build/dts/api/bindings/auxdisplay/hit,hd44780.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down menu on the left and select the desired version.

# hit,hd44780

Vendor: [Hitachi Ltd.](../../bindings.md#dt-vendor-hit)

## Description

```text
Hitachi HD44780 LCD
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `mode` | `int` | ```text Operating mode of display, 8-bit or 4 for 4-bit mode ```  This property is **required**.  Legal values: `4`, `8` |
| `register-select-gpios` | `phandle-array` | ```text GPIO connected to Register Select (RS) of LCD ```  This property is **required**. |
| `read-write-gpios` | `phandle-array` | ```text Optional GPIO used for selecting read or write mode ``` |
| `enable-gpios` | `phandle-array` | ```text GPIO used for enabling commands to be sent ```  This property is **required**. |
| `data-bus-gpios` | `phandle-array` | ```text Array of GPIOs connected to the DB lines of the display, this must contain 8 entries ascending from DB0 to DB7, for 4-bit interface displays, the first 4 must be set as `<0>` ```  This property is **required**. |
| `brightness-gpios` | `phandle-array` | ```text Optional GPIO used for controlling the brightness (contrast) ``` |
| `backlight-gpios` | `phandle-array` | ```text Optional GPIO used for enabling the backlight ``` |
| `line-addresses` | `uint8-array` | ```text Array of addresses for each row, will use defaults if not provided. Default is as per Hitachi HD44780 specification. ```  Default value: `[0, 64, 20, 84]` |
| `enable-line-rise-delay-us` | `int` | ```text Delay time (in us) to wait after enable line rises before setting low. Default is as per Hitachi HD44780 specification. ```  Default value: `800` |
| `enable-line-fall-delay-us` | `int` | ```text Delay time (in us) to wait after enable line falls before sending another command. Default is as per Hitachi HD44780 specification. ```  Default value: `100` |
| `clear-command-delay-us` | `int` | ```text Delay time (in us) to wait after issuing a clear command before sending another command. Default is as per Hitachi HD44780 specification. ```  Default value: `5000` |
| `boot-delay-ms` | `int` | ```text Delay time (in ms) to wait at boot time before sending a command (note: this will delay startup of the whole application by this time, this should only be used when time is needed for the display device to be ready before it can be configured which without any delay would cause the display to not function properly). ``` |
| `columns` | `int` | ```text Number of text columns that the display has ```  This property is **required**. |
| `rows` | `int` | ```text Number of text rows that the display has ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “hit,hd44780” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
